--- a/filtro-paises.css
+++ b/filtro-paises.css
@@ -54,6 +54,7 @@ html {
     margin-left: 40%;
     width: 35vw;
     height: 10vw;
+    background-color: #fff;
   }
   .boton-enlace{
     text-decoration: none;
