--- a/pasarela-pagos-argentina.css
+++ b/pasarela-pagos-argentina.css
@@ -33,6 +33,7 @@ html {
   }
   .container-boton-mercadopago{
     margin-left: 40%;
+    margin-bottom: 5%;
   }
   .cuenta-container{
     border-radius: 40px;
@@ -65,6 +66,30 @@ html {
 
     
   }
+  /* Estilos para los botones */
+button#mostrarInput,
+button#verificarCodigo {
+  background-color: black;
+  color: white;
+  border: 2px solid red;
+  padding: 8px 16px;
+  margin: 10px;
+  cursor: pointer;
+  font-family:  'Montserrat', sans-serif ;
+
+}
+.inputcodigo{
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+/* Centrar los botones */
+button#mostrarInput,
+button#verificarCodigo {
+  display: block;
+  margin: 0 auto;
+}
   @media screen and (min-width: 800px){
     .img1-blakensenWide{
         display: inline-block;
