--- a/pagina-principal.css
+++ b/pagina-principal.css
@@ -1,3 +1,8 @@
+html{
+    overflow-x: hidden; 
+    line-height: 0;
+    width: 100%;
+}
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -5,18 +10,21 @@ body {
     box-sizing: border-box;
     background-color: #000;
     width: 100%;
-    
+    overflow-x: hidden;    
     
 }
 body.blurred #main-content {
     filter: blur(5px);
 }
-
+li{
+    color: #c0bdbd;
+}
 header {
     background-color: #000;
     color: #fff;
     text-align: center;
-    padding: 20px 0;
+    padding:  0;
+    width: 100%;
     
 }
 .h3-header{
@@ -50,17 +58,17 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+   
 }
 
 .card {
     background-color: #980000;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 10px 0;
+    margin: 2%;
     padding: 20px;
-    width: 90%;
-    max-width: 800px;
+    width: 80%;
+    max-width: 100%;
     transition: transform 0.3s;
     clear: both;
 }
@@ -192,7 +200,7 @@ a {
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    margin: auto;
+    
 
     
 }
@@ -202,7 +210,7 @@ a {
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-    width: 80%;
+    margin: 5%;
 }
 
 #age-verification h2 {
