--- a/style-master.css
+++ b/style-master.css
@@ -497,6 +497,7 @@ html {
     background-color: #000;
     width: 100%;
     top:-2vw;
+    
   }
   .h1-whatsapp{
     padding-top: 100px;
@@ -511,6 +512,7 @@ html {
     padding-left: 30%;
     font-family:  'Montserrat', sans-serif ;
     color: #fff;
+    line-height: 1.5;
   }
   .button-whatsapp{
     display: block;
